--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.12.1",
+    "react-router-dom": "^7.1.2",
     "react-svg-worldmap": "^2.0.0-alpha.16"
   }
 }
